Fixed some layout issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,14 @@
 html, body {
+    margin: 0;
+    padding: 0;
     height: 100%;
     width: 100%;
     background-color: aqua;
 }
 
 .main-body{
-    width: 100%;
     height: 100%;
+    width: 100%;
 }
 
 h1{
@@ -17,26 +19,35 @@ h1{
 .color-display{
     border: 2px solid black;
     margin: 5% 10%;
-    width: 80%;
-    height: 60%;
+    width: 60%;
+    height: 40%;
     background: linear-gradient(0deg, rgba(0, 255, 0, 1), rgba(0, 255, 255, 1));
 }
 
-.color-selection{
-padding: 0% 10%;
-}
 
-.color-number{
-    /* ????? remove from html if not using */
+.color-selection{
+    padding: 0% 10%;
 }
 
 .color-list{
     min-height: fit-content;
-    width: 100%;
 }
 
 .color{
+    display: flex;
+    align-items: center;
+    height: 30px;
     margin: 10px;
     padding: 5px;
     border: 2px solid black;
+}
+
+.color h3{
+    padding-left: 5px;
+}
+.color-sample{
+    display: inline-block;
+    background-color: black;
+    height: 28px;
+    width: 28px;
 }
